# conjuguer

./: Makefile  README.md  setup.cfg
man/: conjuguer.1
src/conjuguer/: Makefile  blank.py  conjuguer  main.py  verbs.py
src/conjuguer/po/: conjuguer.pot
src/conjuguer/po/en/: conjuguer.po
src/conjuguer/po/fr/: conjuguer.po
