[metadata]
name = pnu_conjuguer
description = conjugaison des verbes Français
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.3
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/conjuguer/
project_urls =
    Bug Tracker = https://github.com/HubTou/conjuguer/issues
keywords = pnu-project
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    colorama
    dict-fr-AU-DELA
    dict-fr-ABU

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    conjuguer = conjuguer:main

[options.data_files]
man/man1 =
    man/conjuguer.1.gz

